--- a/.github/workflows/ldoc.yml
+++ b/.github/workflows/ldoc.yml
@@ -1,10 +1,24 @@
 name: LDoc
 on: [ push, pull_request ]
 jobs:
-  sile:
+  build:
+    name: Build docs
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Generate docs with LDoc
-        uses: lunarmodules/ldoc@v1.5.0
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Setup Lua
+      uses: leafo/gh-actions-lua@v8
+      with:
+        luaVersion: 5.4
+    - name: Setup Lua Rocks
+      uses: leafo/gh-actions-luarocks@v4
+    - name: Setup dependencies
+      run: luarocks install --only-deps ldoc-dev-1.rockspec
+    - name: Build docs
+      run: make doc-site
+    - name: Deploy
+      if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
